--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
 		"__cxx_version": "c",
 		"__hash_table": "c",
 		"functional": "c",
-		"type_traits": "c"
+		"type_traits": "c",
+		"__locale": "c"
 	}
 }
